codama-macros/tests/codama_attribute/type_nodes/string_type_node/invalid_encoding.fail.rs
use codama::codama;

#[codama(type = string(encoding = invalid))]
pub struct Test;

fn main() {}
